--- a/requirements.txt
+++ b/requirements.txt
@@ -25,7 +25,9 @@ decorator==5.1.1
 defusedxml==0.7.1
 entrypoints==0.4
 executing==1.2.0
+Faker==18.6.0
 fastjsonschema==2.16.3
+favicon==0.7.0
 flatbuffers==23.3.3
 fonttools==4.39.3
 fqdn==1.5.1
@@ -37,13 +39,14 @@ google-auth-oauthlib==1.0.0
 google-pasta==0.2.0
 grpcio==1.54.0
 h5py==3.8.0
+htbuilder==0.6.1
 idna==3.4
 importlib-metadata==6.6.0
 importlib-resources==5.12.0
+install==1.3.5
 ipykernel==6.22.0
 ipython==8.12.0
 ipython-genutils==0.2.0
-ipywidgets==8.0.6
 isoduration==20.11.0
 jax==0.4.8
 jedi==0.18.2
@@ -51,26 +54,26 @@ Jinja2==3.1.2
 joblib==1.2.0
 jsonpointer==2.3
 jsonschema==4.17.3
-jupyter==1.0.0
-jupyter-console==6.6.3
 jupyter-events==0.6.3
 jupyter_client==8.2.0
 jupyter_core==5.3.0
 jupyter_server==2.5.0
 jupyter_server_terminals==0.4.4
 jupyterlab-pygments==0.2.2
-jupyterlab-widgets==3.0.7
 keras==2.12.0
 kiwisolver==1.4.4
 libclang==16.0.0
+lxml==4.9.2
 Markdown==3.4.3
 markdown-it-py==2.2.0
+markdownlit==0.0.7
 MarkupSafe==2.1.2
 matplotlib==3.7.1
 matplotlib-inline==0.1.6
 mdurl==0.1.2
 mistune==2.0.5
 ml-dtypes==0.1.0
+more-itertools==9.1.0
 nbclassic==0.5.5
 nbclient==0.7.4
 nbconvert==7.3.1
@@ -80,6 +83,7 @@ notebook==6.5.4
 notebook_shim==0.2.3
 numpy==1.23.5
 oauthlib==3.2.2
+opencv-python-headless==4.7.0.72
 opt-einsum==3.3.0
 packaging==23.1
 pandas==1.5.3
@@ -101,8 +105,8 @@ pyasn1==0.5.0
 pyasn1-modules==0.3.0
 pycparser==2.21
 pydeck==0.8.1b0
-pydot==1.4.2
 Pygments==2.15.1
+pymdown-extensions==9.11
 Pympler==1.0.1
 pyparsing==3.0.9
 pyrsistent==0.19.3
@@ -112,8 +116,6 @@ pytz==2023.3
 pytz-deprecation-shim==0.1.0.post0
 PyYAML==6.0
 pyzmq==25.0.2
-qtconsole==5.4.2
-QtPy==2.3.1
 requests==2.28.2
 requests-oauthlib==1.3.1
 rfc3339-validator==0.1.4
@@ -128,10 +130,21 @@ six==1.16.0
 smmap==5.0.0
 sniffio==1.3.0
 soupsieve==2.4.1
+st-annotated-text==4.0.0
 stack-data==0.6.2
-streamlit==1.21.0
+streamlit==1.22.0
+streamlit-camera-input-live==0.2.0
+streamlit-card==0.0.4
 streamlit-drawable-canvas==0.9.2
-streamlit-nested-layout==0.1.1
+streamlit-embedcode==0.1.2
+streamlit-extras==0.2.7
+streamlit-faker==0.0.2
+streamlit-image-coordinates==0.1.3
+streamlit-keyup==0.2.0
+streamlit-option-menu==0.3.2
+streamlit-toggle-switch==1.0.2
+streamlit-vertical-slider==1.0.2
+tenacity==8.2.2
 tensorboard==2.12.2
 tensorboard-data-server==0.7.0
 tensorboard-plugin-wit==1.8.1
@@ -158,6 +171,5 @@ webcolors==1.13
 webencodings==0.5.1
 websocket-client==1.5.1
 Werkzeug==2.3.0
-widgetsnbextension==4.0.7
 wrapt==1.14.1
 zipp==3.15.0
